--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Dependencies
         run: 
           python3.9 -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r flask=2.2.2
 
       - name: Run Flake
         run: flake8 .
