--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -19,8 +19,8 @@ jobs:
       
       - name: Install Dependencies
         run: 
-          python3.9 -m pip install --upgrade pip
-          pip install -r flask=2.2.2
+          python3 -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run Flake
         run: flake8 .
