--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: 3.9
       
       - name: Install Dependencies
-        run: 
+        run: |
           python3 -m pip install --upgrade pip
           pip install -r requirements.txt
 
