--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -25,7 +25,7 @@ jobs:
           flake8 .
     
       - name: Install and Run Safety
-        run:
+        run: |
           pip install safety
           safety check -r requirements.txt
       
